# stobo-mcp

./: .gitignore  .mcpbignore  CHANGELOG.md  COMMANDS.md  LICENSE  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-registry.yml  publish.yml
docs/: .mintignore  docs.json  documentation.md  installation.mdx  introduction.mdx  quickstart.mdx
docs/advanced/: environment-variables.mdx  error-handling.mdx  troubleshooting.mdx
docs/guides/: editor-setup.mdx  pricing.mdx  workflows.mdx
docs/tools/: audit-article.mdx  audit-freshness.mdx  audit-site.mdx  check-connection.mdx  extract-tone.mdx  generate-freshness-code.mdx  generate-llms-txt.mdx  generate-robots-txt.mdx  generate-sitemap.mdx  get-credits.mdx  overview.mdx  rewrite-article.mdx
stobo_mcp/: __init__.py  server.py
tests/: test_server.py
