[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stobo-mcp"
version = "0.4.3"
description = "MCP server for Stobo — AI-powered SEO/AEO content optimization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Stobo", email = "hello@trystobo.com"}]
keywords = ["mcp", "seo", "aeo", "ai", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.23.0",
    "stobo>=0.3.7",
]

[project.urls]
Homepage = "https://trystobo.com"
Documentation = "https://trystobo.com"
Repository = "https://github.com/stobo-app/stobo-cli"

[project.scripts]
stobo-mcp = "stobo_mcp.server:main"
